Fixed the issue with scrollbar not showing up

--- a/src/frontend/src/editor/editor_styles.scss
+++ b/src/frontend/src/editor/editor_styles.scss
@@ -30,11 +30,11 @@ $drag-min-width: 100px;
     height: 100%;
     max-height: 100%;
     display: flex;
-    background-color: $heavySoap;
+    background-color: $soapstone;
 }
 
 .e-left-collapsed {
-    background-color: $heavySoap;
+    background-color: $soapstone;
     height: 100%;
 }
 
