--- a/src/frontend/src/editor/sub_screens/file_explorer/building_blocks/oft_explorer/oft_explorer_styles.scss
+++ b/src/frontend/src/editor/sub_screens/file_explorer/building_blocks/oft_explorer/oft_explorer_styles.scss
@@ -14,14 +14,13 @@
     @extend %flexRow;
     align-items: center;
     margin-bottom: 4px;
-    border-radius: 3px;
+    padding-left: 5px;
 }
 
 .oft-icon-title-container {
     @extend %flexRow;
     align-items: center;
     white-space: nowrap;
-    overflow: hidden;
 }
 
 .oft-folder-icon {
@@ -56,7 +55,7 @@
     font-size: 10pt;
     font-weight: 500;
     margin-left: 4px;
-    color: $hardGray;
+    //color: $hardGray;
 }
 
 .oft-indented-children {
