--- a/src/frontend/src/editor/sub_screens/file_explorer/file_explorer_styles.scss
+++ b/src/frontend/src/editor/sub_screens/file_explorer/file_explorer_styles.scss
@@ -1,8 +1,9 @@
 @import "src/global_styles/basic_layouts";
 
 .fe-container {
-    padding: 10px 5px 0;
+    padding: 10px 0 0;
     overflow-x: auto;
     overflow-y: auto;
+    height: 100%;
     max-height: 100%;
 }
